# NutriBalance

./: .gitignore  README.md  main.py  pyproject.toml
data/: makanan.csv
src/nutribalance/: __init__.py  __main__.py  cli.py  nutrition_calculator.py  recommendation.py  visualization.py
