[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutribalance"
version = "0.1.0"
description = "Sistem rekomendasi diet berdasarkan komposisi makromolekul."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
charts = ["matplotlib>=3.8"]

[project.scripts]
nutribalance = "nutribalance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
